[package]
name = "econ"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
reqwest = { version = "0.11.3", features = ["stream"] }
futures-util = "0.3.14"
indicatif = "0.15.0"
tokio = { version = "1.13.0", features = ["full"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"